--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- to add certificate -->
     <iframe src="" id="getCerti" frameborder="0"></iframe>
 
-    <div class="container">
+    <div class="container footer">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <div class="col-md-4 d-flex align-items-center">
                 <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
